force-app/main/default/objects/Meeting_Note__c/Meeting_Note__c.object-meta.xml
<CustomObject>
    <description>Stores meeting notes and their AI-processed insights</description>
    <label>Meeting Note</label>
    <nameField>
        <displayFormat>MN-{0000000}</displayFormat>
        <label>Meeting Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>