force-app/main/default/objects/Meeting_Note__c/fields/Data_Cloud_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Sync_Status__c</fullName>
    <description>Status of Data Cloud synchronization</description>
    <inlineHelpText>Indicates if the meeting note has been synced to Data Cloud</inlineHelpText>
    <label>Data Cloud Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Synced</fullName>
                <default>true</default>
                <label>Not Synced</label>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Sync Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>