force-app/main/default/objects/Meeting_Note__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <description>Date of the meeting</description>
    <inlineHelpText>Date when the meeting took place</inlineHelpText>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>