force-app/main/default/objects/Meeting_Note__c/fields/Processed_Insights__c.field-meta.xml
<CustomField>
    <fullName>Processed_Insights__c</fullName>
    <description>AI-processed insights and structured data from Agentforce</description>
    <inlineHelpText>Structured insights generated by Agentforce from the meeting notes</inlineHelpText>
    <label>Processed Insights</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>