force-app/main/default/objects/Meeting_Note__c/fields/Raw_Notes__c.field-meta.xml
<CustomField>
    <fullName>Raw_Notes__c</fullName>
    <description>Original natural language meeting notes entered by the user</description>
    <inlineHelpText>Enter the meeting notes in natural language. Agentforce will process this text.</inlineHelpText>
    <label>Raw Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>