force-app/main/default/objects/Meeting_Note__c/listViews/All_Meeting_Notes.listView-meta.xml
<ListView>
    <fullName>All_Meeting_Notes</fullName>
    <columns>NAME</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Processing_Status__c</columns>
    <columns>Data_Cloud_Sync_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Meeting Notes</label>
</ListView>